--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lousa-app",
+  "name": "bunnyboard",
   "version": "1.0.0",
   "description": "Bloco de notas Bunnyboard",
   "main": "main.js",
